--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Naruto</string>
+    <string name="app_name">游民星空</string>
+    <string name="title_home_page">首页</string>
+    <string name="title_game">游戏</string>
+    <string name="title_circle">圈子</string>
+    <string name="title_me">我的</string>
 </resources>
