集合未完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="tab_industry">产业</string>
     <string name="tab_entertainment">娱乐</string>
     <string name="tab_mobile_games">手游</string>
+    <string name="tab_evaluation">测评</string>
+    <string name="tab_home_page">首页</string>
+    <string name="tab_article">文章</string>
     <!--ViewPage内容-->
     <string name="section_format">Hello World from section: %1$d</string>
 </resources>
