--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="tab_video">视频</string>
     <string name="tab_evaluation">测评</string>
     <string name="game_strategy">游戏简介</string>
-    <string name="game_item_comments_section">评价区</string>
+    <string name="game_item_picture">游戏图片</string>
 
 </resources>
